Bug 280749 - Incorrect order used when "sort by presence"
Summary: Incorrect order used when "sort by presence"
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-25 01:03 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2011-08-25 01:03:24 UTC
George K says (in a conversation about global presence) order should be
Online, Busy, Away, XA, Offline
This was confirmed as the order that Gnome people use too.

Sorting other contacts by presence should reflect this.
Comment 1 Martin Klapetek 2011-09-13 10:18:26 UTC
Git commit 59c19e47733a2cf5863c9f5852dfd413017e03c8 by Martin Klapetek.
Committed on 13/09/2011 at 12:17.
Pushed by mklapetek into branch 'master'.

Custom presence sort order

BUG: 280749

M  +36   -27   models/accounts-filter-model.cpp
M  +4    -1    models/accounts-filter-model.h

http://commits.kde.org/telepathy-contact-list/59c19e47733a2cf5863c9f5852dfd413017e03c8