Custom presence sort order

BUG: 280749